# Patience-Sort

./: CMakeLists.txt  LICENSE  PatienceSort.h  README.md  RunPool.h  main.cpp
